fix: adjust button gap

--- a/src/components/ReposList/ReposList.module.css
+++ b/src/components/ReposList/ReposList.module.css
@@ -37,10 +37,14 @@
     border-radius: 20px;
     border: none;
     text-align: center;
-    display: grid;
-    grid-template-rows: 1fr 1fr 3fr;
-    grid-row-gap: 16px;
 
+}
+
+
+.cardBody{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .itemLink{
